--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 </head>
     
 <body>
-testing
+Kindergarten Math Drill
+Description
+
+Privacy Policy
+We do not collect personal information.
 </body>
 </html>
 
