--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 </head>
     
 <body>
-Kindergarten Math Drill
-Description
 
-Privacy Policy
+<h3 width=500 style="background-color: #EEE8AA">Kindergarten Math Drill</h3>
+
+
+<h3 width=500 style="background-color: #EEE8AA">Description</h3>
+
+<h3 width=500 style="background-color: #EEE8AA">Privacy Policy</h3>    
+
 We do not collect personal information.
 </body>
 </html>
