--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     
 <body>
 
-<h3 width=500 style="background-color: #EEE8AA">Kindergarten Math Drill</h3>
+<h4>Kindergarten Math Drill</h4>
 
+<h3 style="background-color: #EEE8AA">Description</h3>
 
-<h3 width=500 style="background-color: #EEE8AA">Description</h3>
+This is a simple math drill but with multiple reward animations.  There is no sound, no reading requirement,<br>
+no keyboard entry (only button clicks).<br><br>
+	
+The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
+subtraction, missing addend, sequences, and greater-than/less-than.<br><br>
+   
+The child can view her number of correct answers, shown with an emoji for each one.<br><br>
+	
+If the child enters an incorrect answer, a hint image appears.  After 3 incorrect answers, incorrect answer buttons<br>
+begin to be disabled in each further incorrect answer until only one is left.<br><br>
 
-<h3 width=500 style="background-color: #EEE8AA">Privacy Policy</h3>    
+On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
+a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future<br>
+sessions.
+
+<h3 style="background-color: #EEE8AA">Privacy Policy</h3>    
 
 We do not collect personal information.
 </body>
