--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     
 <body>
 
+<img src="iconPreview3-40.png" alt="MathDrillK" width="60" height="60">
+	
 <h4>Kindergarten Math Drill</h4>
 
 <h3 style="background-color: #EEE8AA">Description</h3>
