--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     
 <body>
 
-<img src="iconPreview3-40.png" alt="MathDrillK" width="60" height="60">
+
 	
-<h4>Kindergarten Math Drill</h4>
+<h4><img src="iconPreview3-40.png" alt="MathDrillK" width="40" height="40"> Kindergarten Math Drill</h4>
 
 <h3 style="background-color: #EEE8AA">Description</h3>
 
