--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <html>
 <head>
-<title>test site</title>
+<title>Kindergarten Math Drill</title>
 </head>
     
 <body>
 
-
+<h4><img src="iconPreview3-40.png" alt="" width="40" height="40"> Kindergarten Math Drill</h4>
 	
-<h4><img src="iconPreview3-40.png" alt="MathDrillK" width="40" height="40"> Kindergarten Math Drill</h4>
+<h3 style="background-color: #EEE8AA">Privacy Policy</h3>    
 
+We do not collect personal information.
+	
 <h3 style="background-color: #EEE8AA">Description</h3>
 
 This is a simple math drill but with multiple reward animations.  There is no sound, no reading requirement,<br>
-no keyboard entry (only button clicks).<br><br>
+no keyboard entry (only button clicks).  There are no ads.<br><br>
 	
 The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
 subtraction, missing addend, sequences, and greater-than/less-than.<br><br>
@@ -26,9 +28,21 @@ On a settings page (for adults but with no restrictions) children may be added b
 a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future<br>
 sessions.
 
-<h3 style="background-color: #EEE8AA">Privacy Policy</h3>    
+<h3 style="background-color: #EEE8AA">Instructions for the Adult</h3>
+	
+On first running the app, there is the option of adding a player.  Later the wheel at the bottom of the home page<br>
+opens a settings page.  Here players can be added or deleted.  There are 3 levels of increasing difficulty,<br>
+and a level can be chosen for the current player.  The clear-settings button sets the number of correct answers<br>
+to zero and the level to 1 for the current player.
+	
+<h3 style="background-color: #EEE8AA">Instructions for the Child</h3>
 
-We do not collect personal information.
+On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
+Click the green "Go" button, and look at the question.  Click one of the green buttons with the answer.<br>
+If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
+If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
+You can click the gold button at the bottom to see an emoji for each correct answer.  The "Back"<br>
+button at the top returns you to the problems.
 </body>
 </html>
 
