--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 <h3 style="background-color: #EEE8AA">Privacy Policy</h3>    
 
-We do not collect personal information.
+The developer does not collect any data from this app.
 	
 <h3 style="background-color: #EEE8AA">Description</h3>
 
