--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
 <body>
 
-<h4><img src="iconPreview3-40.png" alt="" width="40" height="40"> Kindergarten Math Drill</h4>
+<h2><img src="iconPreview3-40.png" alt="" width="40" height="40"> Kindergarten Math Drill</h4>
 	
 <h3>Privacy Policy</h3>    
 
@@ -14,16 +14,16 @@ The developer does not collect any data from this app.
 <h3>Description</h3>
 
 This is a simple math drill but with multiple reward animations.  There is no sound, no reading requirement,<br>
-no keyboard entry or dragging (only button clicks).  The app is free, and there are no ads.<br><br>
+no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br><br>
 	
 The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
-subtraction, missing addend (what to add to make 10), sequences (including counting by 10's), and<br>
+subtraction, missing addend (what to add to make 10), sequences (including counting by 10s), and<br>
 greater-than/less-than comparisons.<br><br>
    
 The child can view her number of correct answers, shown with an emoji for each one.<br><br>
 	
-If the child enters an incorrect answer, a hint image appears.  After 3 incorrect answers, incorrect answer buttons<br>
-begin to be disabled on each further incorrect answer until only one is left.<br><br>
+If the child enters an incorrect answer, a hint image appears.  After 2 incorrect answers, incorrect answer buttons<br>
+begin to be disabled on each further incorrect answer until only one is left to choose.<br><br>
 
 On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
 a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future<br>
@@ -36,7 +36,7 @@ opens a settings page.  Here players can be added or deleted.  There are 3 level
 and a level can be chosen for the current player.  The clear-settings button sets the number of correct answers<br>
 to zero and the level to 1 for the current player.<br><br>
 	
-A picker on the home page allows selection of a player, but this picker defaults to the last child playing.<br>	
+A picker on the home page allows selection of a player.  It defaults to the last child playing.<br>	
 		
 <h3>Instructions for the Child</h3>
 
@@ -47,6 +47,8 @@ If the answer is incorrect, help will be provided.  Once you have at least one c
 You can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
 can be scrolled if you have many of them.  The "Back" button at the top returns you to the problems.<br><br>
 	
+After more than 2 incorrect answers, some of the answer buttons will be disabled, to guide you to the correct one.<br><br>	
+	
 The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
 	
 After 3 incorrect answers, the next button will appear, allowing you to skip to the next problem.
@@ -54,7 +56,7 @@ After 3 incorrect answers, the next button will appear, allowing you to skip to 
 <hr>
 	
 <pre>
-This page was last uopdated March 11, 2021.  The developer may be contacted at pdyerr icloud com.
+This page was last updated March 11, 2021.  The developer may be contacted at pdyerr icloud com.
 </pre>
 </body>
 </html>
