--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ opens a settings page.  Here players can be added or deleted.  There are 3 level
 and a level can be chosen for the current player.  The clear-settings button sets the number of correct answers<br>
 to zero and the level to 1 for the current player.<br><br>
 	
+There is no penalty for incorrect answers.<br><br>
+	
 A picker on the home page allows selection of a player.  It defaults to the last child playing.<br>	
 		
 <h3>Instructions for the Child</h3>
