--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ The developer does not collect any data from this app.
 
 This is a simple math drill but with multiple reward animations.  There is no sound, no reading requirement,<br>
 no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
-No Wi-Fi or cell signal is required.<br>
+No Wi-Fi or cell signal is required.<br><br>
 	
 The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
 subtraction, missing addend (what to add to make 10), sequences (including counting by 10s), and<br>
