--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ No Wi-Fi or cell signal is required.<br><br>
 	
 The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
 subtraction, missing addend (what to add to make 10), sequences (including counting by 10s), and<br>
-greater-than/less-than comparisons.<br><br>
+greater-than/less-than comparisons.  All problem types appear after 40 correct answers.<br><br>
    
 The child can view her number of correct answers, shown with an emoji for each one.<br><br>
 	
@@ -39,7 +39,9 @@ to zero and the level to 1 for the current player.<br><br>
 	
 There is no penalty for incorrect answers.<br><br>
 	
-A picker on the home page allows selection of a player.  It defaults to the last child playing.<br>	
+A picker on the home page allows selection of a player.  It defaults to the last child playing.<br><br>
+	
+There is no automatic progression between levels -- the settings page must be used.
 		
 <h3>Instructions for the Child</h3>
 
