--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ greater-than/less-than comparisons.  All problem types appear after 40 correct a
 The child can view her number of correct answers, shown with an emoji for each one.<br><br>
 	
 If the child enters an incorrect answer, a hint image appears.  After 2 incorrect answers, incorrect answer buttons<br>
-begin to be disabled on each further incorrect answer until only one is left to choose.<br><br>
+become disabled on each further incorrect answer until only one is left to choose.<br><br>
 
 On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
 a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future<br>
