--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ sessions.
 
 <h3>Instructions for the Adult</h3>
 	
-On first running the app, there is the option of adding a player.  Later the wheel at the bottom of the home page<br>
-opens a settings page.  Here players can be added or deleted.  There are 3 levels of increasing difficulty,<br>
-and a level can be chosen for the current player.  The clear-settings button sets the number of correct answers<br>
-to zero and the level to 1 for the current player.<br><br>
+On first running the app, there is the option of adding a child's name.  Later the wheel at the bottom of the home page<br>
+opens a settings page.  Here children can be added or deleted.  There are 3 levels of increasing difficulty,<br>
+and a level can be chosen for the current child.  The clear-settings button sets the number of correct answers<br>
+to zero and the level to 1 for the current child.<br><br>
 	
 There is no penalty for incorrect answers.<br><br>
 	
-A picker on the home page allows selection of a player.  It defaults to the last child playing.<br><br>
+A picker on the home page allows selection of a child's name.  It defaults to the last child playing.<br><br>
 	
 There is no automatic progression between levels -- the settings page must be used.
 		
