--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@ On the home page, choose your name if it's not already selected, or have an adul
 Click the green "Go" button, and look at the question.  Click one of the green buttons with the answer.<br>
 If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
 If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
-You can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
+you can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
 can be scrolled if you have many of them.  The "Back" button at the top returns you to the problems.<br><br>
 	
 After more than 2 incorrect answers, some of the answer buttons will be disabled, to guide you to the correct one.<br><br>	
 	
 The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
 	
-After 3 incorrect answers, the next button will appear, allowing you to skip to the next problem.
+After 3 incorrect answers, the next button will become enabled, allowing you to skip to the next problem.
 	
 <hr>
 	
