--- a/index.html
+++ b/index.html
@@ -1,68 +1,12 @@
 <html>
 <head>
-<title>&nbsp;&nbsp;Kindergarten Math Drill</title>
+<title>&nbsp;&nbsp;Math Drill Apps</title>
 </head>
     
 <body>
 
-<h2><img src="iconPreview3-40.png" alt="" width="40" height="40"> Kindergarten Math Drill</h2>
+<a href="Kindergarten.html">Kindergarten</a>
 	
-<h3>Privacy Policy</h3>    
-
-The developer does not collect any data from this app.
-	
-<h3>Description</h3>
-
-This is a simple math drill but with multiple reward animations.  There is no sound, no reading requirement,<br>
-no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
-No Wi-Fi or cell signal is required.<br><br>
-	
-The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
-subtraction, missing addend (what to add to make 10), sequences (including counting by 10s), and<br>
-greater-than/less-than comparisons.  All problem types appear after 40 correct answers.<br><br>
-   
-The child can view her number of correct answers, shown with an emoji for each one.<br><br>
-	
-If the child enters an incorrect answer, a hint image appears.  After 2 incorrect answers, incorrect answer buttons<br>
-become disabled on each further incorrect answer until only one is left to choose.<br><br>
-
-On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
-a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future<br>
-sessions.
-
-<h3>Instructions for the Adult</h3>
-	
-On first running the app, there is the option of adding a child's name.  Later the wheel at the bottom of the home page<br>
-opens a settings page.  Here children can be added or deleted.  There are 3 levels of increasing difficulty,<br>
-and a level can be chosen for the current child.  The clear-settings button sets the number of correct answers<br>
-to zero and the level to 1 for the current child.<br><br>
-	
-There is no penalty for incorrect answers.<br><br>
-	
-A picker on the home page allows selection of a child's name.  It defaults to the last child playing.<br><br>
-	
-There is no automatic progression between levels -- the settings page must be used.
-		
-<h3>Instructions for the Child</h3>
-
-On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
-Click the green "Go" button, and look at the question.  Click one of the green buttons with the answer.<br>
-If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
-If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
-you can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
-can be scrolled if you have many of them.  The "Back" button at the top returns you to the problems.<br><br>
-	
-After more than 2 incorrect answers, some of the answer buttons will be disabled, to guide you to the correct one.<br><br>	
-	
-The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
-	
-After 3 incorrect answers, the next button will become enabled, allowing you to skip to the next problem.
-	
-<hr>
-	
-<pre>
-This page was last updated March 12, 2021.  The developer may be contacted at pdyerr icloud com.
-</pre>
 </body>
 </html>
 
