--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     
 <body>
 
-<a href="Kindergarten.html">Kindergarten</a>
-	
+<a href="Kindergarten.html">Kindergarten Math Drill</a>
+<br>
+<a href="FirstGrade.html">First Grade Math Drill</a>
+
 </body>
 </html>
 
