--- a/FirstGrade.html
+++ b/FirstGrade.html
@@ -5,7 +5,9 @@
     
 <body>
 
-<h2><img src="iconPreview3-40.png" alt="" width="40" height="40"> FirstGrade Math Drill</h2>
+<h2><img src="iconPreview3-40.png" alt="" width="40" height="40"> First Grade Math Drill</h2>
+	
+<h2>THIS PAGE IS IN PROGRESS</h2>
 	
 <h3>Privacy Policy</h3>    
 
@@ -13,14 +15,15 @@ The developer does not collect any data from this app.
 	
 <h3>Description</h3>
 
-This is a simple math drill but with multiple reward animations.  There is no sound, no reading requirement,<br>
+This is a simple math drill but with multiple reward animations.  There is no sound, minimal reading requirement,<br>
 no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
 No Wi-Fi or cell signal is required.<br><br>
 	
+	<!--
 The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
 subtraction, missing addend (what to add to make 10), sequences (including counting by 10s), and<br>
 greater-than/less-than comparisons.  All problem types appear after 40 correct answers.<br><br>
-   
+   -->
 The child can view her number of correct answers, shown with an emoji for each one.<br><br>
 	
 If the child enters an incorrect answer, a hint image appears.  After 2 incorrect answers, incorrect answer buttons<br>
@@ -61,7 +64,7 @@ After 3 incorrect answers, the next button will become enabled, allowing you to 
 <hr>
 	
 <pre>
-This page was last updated March 12, 2021.  The developer may be contacted at pdyerr icloud com.
+This page was last updated March 21, 2022.  The developer may be contacted at pdyerr icloud com.
 </pre>
 </body>
 </html>
