--- a/FirstGrade.html
+++ b/FirstGrade.html
@@ -19,12 +19,11 @@ This is a simple math drill but with multiple reward animations.  There is no so
 no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
 No Wi-Fi or cell signal is required.<br><br>
 	
-	<!--
-The app starts with addition of numbers 1 through 5, then progresses to numbers adding up to 10,<br>
-subtraction, missing addend (what to add to make 10), sequences (including counting by 10s), and<br>
-greater-than/less-than comparisons.  All problem types appear after 40 correct answers.<br><br>
-   -->
-The child can view her number of correct answers, shown with an emoji for each one.<br><br>
+The app starts with addition and subtraction, then progresses to missing addend, sequences, comparing numbers,<br>
+base 10 blocks, fractions, 2D geometrical shapes, telling time, fractions, bar charts, and measurement.<br>
+All problem types appear after 40 correct answers.<br><br>
+	
+The child can view the number of correct answers, shown with an emoji for each one.<br><br>
 	
 If the child enters an incorrect answer, a hint image appears.  After 2 incorrect answers, incorrect answer buttons<br>
 become disabled on each further incorrect answer until only one is left to choose.<br><br>
@@ -53,7 +52,7 @@ Click the green "Go" button, and look at the question.  Click one of the green b
 If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
 If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
 you can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
-can be scrolled if you have many of them.  The "Back" button at the top returns you to the problems.<br><br>
+will be scrolled if you have many of them.  The "back" button at the top returns you to the problems.<br><br>
 	
 After more than 2 incorrect answers, some of the answer buttons will be disabled, to guide you to the correct one.<br><br>	
 	
@@ -64,7 +63,7 @@ After 3 incorrect answers, the next button will become enabled, allowing you to 
 <hr>
 	
 <pre>
-This page was last updated March 21, 2022.  The developer may be contacted at pdyerr icloud com.
+This page was last updated April 3, 2022.  The developer may be contacted at pdyerr icloud com.
 </pre>
 </body>
 </html>
