--- a/FirstGrade.html
+++ b/FirstGrade.html
@@ -5,7 +5,7 @@
     
 <body>
 
-<h2><img src="iconPreview3-40.png" alt="" width="40" height="40"> First Grade Math Drill</h2>
+<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> First Grade Math Drill</h2>
 		
 <h3>Privacy Policy</h3>    
 
