--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </br></br>
 <a href="FirstGrade.html">First Grade Math Drill</a>
 
+</br></br>
+<a href="SecondGrade.html">Second Grade Math Drill</a>
+
 </body>
 </html>
 
