--- a/SecondGrade.html
+++ b/SecondGrade.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>&nbsp;&nbsp;First Grade Math Drill</title>
+<title>&nbsp;&nbsp;Second Grade Math Drill</title>
 </head>
     
 <body>
 
-<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> First Grade Math Drill</h2>
+<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> Second Grade Math Drill</h2>
 		
 <h3>Privacy Policy</h3>    
 
@@ -17,18 +17,15 @@ This is a simple math drill but with multiple reward animations.  There is no so
 no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
 No Wi-Fi or cell signal is required.<br><br>
 	
-The app starts with addition and subtraction, then progresses to missing addend, sequences, comparing numbers,<br>
-base 10 blocks, fractions, 2D geometrical shapes, telling time, fractions, bar charts, and measurement.<br>
-All problem types appear after 40 correct answers.<br><br>
+The problem types are addition and subtraction, missing addend, sequences, comparing numbers,<br>
+base 10 blocks, fractions, 2D and 3D geometrical shapes, telling time, fractions, bar charts, measurement, and Venn diagrams.<br><br>
 	
 The child can view the number of correct answers, shown with an emoji for each one.<br><br>
 	
-If the child enters an incorrect answer, a hint image appears.  After 2 incorrect answers, incorrect answer buttons<br>
-become disabled on each further incorrect answer until only one is left to choose.<br><br>
+If the child enters an incorrect answer, a hint image appears.  After 3 incorrect answers, a new problem can be chosen.<br><br>
 
 On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
-a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future<br>
-sessions.
+a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future sessions.
 
 <h3>Instructions for the Adult</h3>
 	
@@ -51,9 +48,7 @@ If the answer is correct you can click the green arrow at the bottom to see the 
 If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
 you can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
 will be scrolled if you have many of them.  The "back" button at the top returns you to the problems.<br><br>
-	
-After more than 2 incorrect answers, some of the answer buttons will be disabled, to guide you to the correct one.<br><br>	
-	
+		
 The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
 	
 After 3 incorrect answers, the next button will become enabled, allowing you to skip to the next problem.
@@ -61,7 +56,7 @@ After 3 incorrect answers, the next button will become enabled, allowing you to 
 <hr>
 	
 <pre>
-This page was last updated April 3, 2022.  The developer may be contacted at pdyerr icloud com.
+This page was last updated March 24, 2024.  The developer may be contacted at pdyerr icloud com.
 </pre>
 </body>
 </html>
