--- a/ThirdGrade.html
+++ b/ThirdGrade.html
@@ -1,1 +1,62 @@
-testing
+<html>
+<head>
+<title>&nbsp;&nbsp;Second Grade Math Drill</title>
+</head>
+    
+<body>
+
+<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> Second Grade Math Drill</h2>
+		
+<h3>Privacy Policy</h3>    
+
+The developer does not collect any data from this app.
+	
+<h3>Description</h3>
+
+This is a simple math drill but with multiple reward animations.  There is no sound, minimal reading requirement,<br>
+no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
+No Wi-Fi or cell signal is required.<br><br>
+	
+The problem types are addition and subtraction, missing addend, sequences, comparing numbers,<br>
+base 10 blocks, fractions, 2D and 3D geometrical shapes, telling time, fractions, bar charts, measurement, and Venn diagrams.<br><br>
+	
+The child can view the number of correct answers, shown with an emoji for each one.<br><br>
+	
+If the child enters an incorrect answer, a hint image appears.  After 3 incorrect answers, a new problem can be chosen.<br><br>
+
+On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
+a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future sessions.
+
+<h3>Instructions for the Adult</h3>
+	
+On first running the app, there is the option of adding a child's name.  Later the wheel at the bottom of the home page<br>
+opens a settings page.  Here children can be added or deleted.  There are 3 levels of increasing difficulty,<br>
+and a level can be chosen for the current child.  The clear-settings button sets the number of correct answers<br>
+to zero and the level to 1 for the current child.<br><br>
+	
+There is no penalty for incorrect answers.<br><br>
+	
+A picker on the home page allows selection of a child's name.  It defaults to the last child playing.<br><br>
+	
+There is no automatic progression between levels -- the settings page must be used.
+		
+<h3>Instructions for the Child</h3>
+
+On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
+Click the green "Go" button, and look at the question.  Click one of the green buttons with the answer.<br>
+If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
+If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
+you can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
+will be scrolled if you have many of them.  The "back" button at the top returns you to the problems.<br><br>
+		
+The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
+	
+After 3 incorrect answers, the next button will become enabled, allowing you to skip to the next problem.
+	
+<hr>
+	
+<pre>
+This page was last updated March 24, 2024.  The developer may be contacted at pdyerr icloud com.
+</pre>
+</body>
+</html>
