--- a/ThirdGrade.html
+++ b/ThirdGrade.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>&nbsp;&nbsp;Second Grade Math Drill</title>
+<title>&nbsp;&nbsp;Third Grade Math Drill</title>
 </head>
     
 <body>
@@ -13,14 +13,15 @@ The developer does not collect any data from this app.
 	
 <h3>Description</h3>
 
-This is a simple math drill but with multiple reward animations.  There is no sound, minimal reading requirement,<br>
-no keyboard entry or dragging required (only button clicks).  The app is free, and there are no ads.<br>
+This is a simple math drill but with multiple reward animations.  There is no sound.  The app is free, and there are no ads.<br>
 No Wi-Fi or cell signal is required.<br><br>
 	
-The problem types are addition and subtraction, missing addend, sequences, comparing numbers,<br>
-base 10 blocks, fractions, 2D and 3D geometrical shapes, telling time, fractions, bar charts, measurement, and Venn diagrams.<br><br>
+The problem types are addition, subtraction, multiplication, division, simple algebra, fractions,<br>
+decimals, geometry, calendars, bar charts, Venn diagrams and word problems.<br><br>
 	
 The child can view the number of correct answers, shown with an emoji for each one.<br><br>
+
+There is a math game that can be played after 10 correct answers.<br><br>
 	
 If the child enters an incorrect answer, a hint image appears.  After 3 incorrect answers, a new problem can be chosen.<br><br>
 
@@ -43,7 +44,9 @@ There is no automatic progression between levels -- the settings page must be us
 <h3>Instructions for the Child</h3>
 
 On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
-Click the green "Go" button, and look at the question.  Click one of the green buttons with the answer.<br>
+Click the green "Go" button, and look at the question.  Follow the instructions to answer (usually<br>
+clicking one of the green buttons with the answer.<br><br>
+	
 If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
 If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
 you can click the gold button at the bottom to see an emoji for each correct answer.  The emoji contents<br>
@@ -51,7 +54,10 @@ will be scrolled if you have many of them.  The "back" button at the top returns
 		
 The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
 	
-After 3 incorrect answers, the next button will become enabled, allowing you to skip to the next problem.
+If the next button becomes enabled, you can skip to the next problem.<br><br>
+
+After 10 correct answers, the game button becomes enabled, and you can play a math game.<br>
+After playing the game you will have to answer 10 more questions before you can play again.
 	
 <hr>
 	
