--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="SecondGrade.html">Second Grade Math Drill</a>
 </br></br>
 
-<a href="ThirdGrade.html">Second Grade Math Drill</a>
+<a href="ThirdGrade.html">Third Grade Math Drill</a>
     
 </body>
 </html>
