--- a/ThirdGrade.html
+++ b/ThirdGrade.html
@@ -15,9 +15,9 @@ The developer does not collect any data from this app.
 
 This is a simple math drill but with multiple reward animations.  There is no sound.  The app is free, and there are no ads.<br>
 No Wi-Fi or cell signal is required.<br><br>
-	
-The problem types are addition, subtraction, multiplication, division, simple algebra, fractions,<br>
-decimals, geometry, calendars, bar charts, Venn diagrams and word problems.<br><br>
+
+The problem types are addition,  subtraction, multiplication, division, simple algebra, fractions and decimals, geometry,<br>
+bar charts, pie charts, word problems, Venn diagrams and calendars.<br><br>
 	
 The child can view the number of correct answers, shown with an emoji for each one.<br><br>
 
