--- a/ThirdGrade.html
+++ b/ThirdGrade.html
@@ -23,7 +23,8 @@ The child can view the number of correct answers, shown with an emoji for each o
 
 There is a math game that can be played after 10 correct answers.<br><br>
 	
-If the child enters an incorrect answer, a hint image appears.  After 3 incorrect answers, a new problem can be chosen.<br><br>
+If the child enters an incorrect answer or clicks a "show hint" button, a hint image appears.  After 3 incorrect answers<br>
+or a show-hint click, a new problem can be chosen.<br><br>
 
 On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
 a level 1 - 3.  The name, level and the number of correct answers are stored on your device for future sessions.
@@ -45,7 +46,7 @@ There is no automatic progression between levels -- the settings page must be us
 
 On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
 Click the green "Go" button, and look at the question.  Follow the instructions to answer (usually<br>
-clicking one of the green buttons with the answer.<br><br>
+clicking one of the green buttons with the answer).<br><br>
 	
 If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
 If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
