--- a/FourthGrade.html
+++ b/FourthGrade.html
@@ -5,7 +5,7 @@
     
 <body>
 
-<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> Third Grade Math Drill</h2>
+<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> Fourth Grade Math Drill</h2>
 		
 <h3>Privacy Policy</h3>    
 
@@ -19,6 +19,8 @@ No Wi-Fi or cell signal is required.<br><br>
 	
 The problem types are addition,  subtraction, multiplication, division, decimals, fractions, coordinate grids, factoring,<br>
 line graphs, order of operations, Venn diagrams, cube volume, word problems, statistics, and simple algebra.<br><br>
+
+A worksheet page can be accessed when the problems are too difficult to solve in the child's head.<br><br>
 	
 The child can view the number of correct answers, shown with an emoji for each one.<br><br>
 
@@ -48,7 +50,7 @@ There is no automatic progression between levels -- the settings page must be us
 
 On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
 Click the green "Go" button, and look at the question.  Follow the instructions to answer (usually<br>
-clicking one of the green buttons with the answer).<br><br>
+by clicking one of the green buttons with the answer).<br><br>
 	
 If the answer is correct you can click the green arrow at the bottom to see the next problem.<br>
 If the answer is incorrect, help will be provided.  Once you have at least one correct answer,<br>
@@ -60,7 +62,11 @@ The green next button can be clicked immediately after a correct answer.  You do
 If the next button becomes enabled, you can skip to the next problem.<br><br>
 
 After 10 correct answers, the game button becomes enabled, and you can play a math game.<br>
-After playing the game you will have to answer 10 more questions before you can play again.
+After playing the game you will have to answer 10 more questions before you can play again.<br><br>
+
+If the problem is too difficult to solve in your head, and the orange button at the bottom is<br>
+enabled, you can switch to a worksheet page, layout the problem, and save your work.  When you<br>
+return to the problem page, your work is shown.
 	
 <hr>
 	
