--- a/MathFactsTimer.html
+++ b/MathFactsTimer.html
@@ -1,1 +1,58 @@
-test
+<html>
+<head>
+<title>&nbsp;&nbsp;MathFactsTimer</title>
+</head
+    
+<body>
+
+<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> Fourth Grade Math Drill</h2>
+		
+<h3>Privacy Policy</h3>    
+
+The developer does not collect any data from this app.
+	
+<h3>Description</h3>
+
+This is a simple rapid-fire math drill with a two-minute timer.  There is no sound.  The app is free.<br>
+No Wi-Fi or cell signal is required.<br><br>
+	
+The problem types are addition, subtraction, multiplication and division.<br><br>
+	
+At the end of two minutes, the number of correct and incorrect answers is displayed,<br>
+along with the best correct thus far.  Twelve values are stored for future sessions:<br>
+one for each of the 4 operations and one for each of 3 levels.<br><br>
+  
+On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
+a level 1 - 3.  The name, level and chosen operation are stored on your device for future sessions.
+
+<h3>Instructions for the Adult</h3>
+	
+On first running the app, there is the option of adding a child's name.  Later the wheel at the bottom of the home page<br>
+opens a settings page.  Here children can be added or deleted.  There are 3 levels of increasing difficulty,<br>
+and a level can be chosen for the current child.  The clear-settings button sets the number of correct answers<br>
+to zero (for all operations and levels) and the level to 1 for the current child.<br>
+The operation is set to "add".<br><br>
+	
+There is no penalty for incorrect answers.<br><br>
+	
+A picker on the home page allows selection of a child's name.  It defaults to the last child playing.<br><br>
+	
+There is no automatic progression between levels -- the settings page must be used.
+		
+<h3>Instructions for the Child</h3>
+
+On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
+Click the green "Go" button, and on the next page click the "Start" button.  Click one of the 5 buttons to answer.<br>
+A new problem will immediately pop up until 2 minutes is up.<br><br>
+	
+The "back" button at the top returns you to the home page.<br><br>
+		
+The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
+
+<hr>
+	
+<pre>
+This page was last updated February 7, 2026.  The developer may be contacted at pdyerr icloud com.
+</pre>
+</body>
+</html>
