--- a/MathFactsTimer.html
+++ b/MathFactsTimer.html
@@ -20,18 +20,19 @@ The problem types are addition, subtraction, multiplication and division.<br><br
 	
 At the end of two minutes, the number of correct and incorrect answers is displayed,<br>
 along with the best correct thus far.  Twelve values are stored for future sessions:<br>
-one for each of the 4 operations and one for each of 3 levels.<br><br>
+one for each of the 4 operations and 3 levels.<br><br>
   
 On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
-a level 1 - 3.  The name, level and chosen operation are stored on your device for future sessions.
+a level 1 - 3.  The name, level, chosen operation and 12 best-correct values are stored on your device<br>
+for future sessions.<br><br
 
 <h3>Instructions for the Adult</h3>
 	
-On first running the app, there is the option of adding a child's name.  Later the wheel at the bottom of the home page<br>
+On first running the app, there is the option of adding a child's name.  One the home page the wheel at the bottom<br>
 opens a settings page.  Here children can be added or deleted.  There are 3 levels of increasing difficulty,<br>
 and a level can be chosen for the current child.  The clear-settings button sets the number of correct answers<br>
 to zero (for all operations and levels) and the level to 1 for the current child.<br>
-The operation is set to "add".<br><br>
+The operation is set to "add", and all best-correct values are set to zero.<br><br>
 	
 There is no penalty for incorrect answers.<br><br>
 	
@@ -43,12 +44,15 @@ There is no automatic progression between levels -- the settings page must be us
 
 On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
 Click the green "Go" button, and on the next page click the "Start" button.  Click one of the 5 buttons to answer.<br>
-A new problem will immediately pop up until 2 minutes is up.<br><br>
+New problems will immediately pop up until 2 minutes is up.<br><br>
+	
+At the end of 2 minutes, the number of correct, number of incorrect and your number-correct <br>
+previous best will be displayed.  If the number of correct answers if greater than zero,<br>
+a ballopn animation will be displayed.  If you set a new record, a larger<br>
+balloon will float up with an invitation to pop it by clicking on it.<br><br>
 	
 The "back" button at the top returns you to the home page.<br><br>
 		
-The green next button can be clicked immediately after a correct answer.  You don't have to wait for the animations.<br><br>
-
 <hr>
 	
 <pre>
