--- a/MathFactsTimer.html
+++ b/MathFactsTimer.html
@@ -5,7 +5,7 @@
     
 <body>
 
-<h2><img src="iconPreview4-1024-40.png" alt="" width="40" height="40"> Math Facts Timer</h2>
+<h2><img src="1024x1024.MathFactsTimer.png" alt="" width="40" height="40"> Math Facts Timer</h2>
 		
 <h3>Privacy Policy</h3>    
 
