--- a/MathFactsTimer.html
+++ b/MathFactsTimer.html
@@ -13,24 +13,25 @@ The developer does not collect any data from this app.
 	
 <h3>Description</h3>
 
-This is a simple rapid-fire math drill with a two-minute timer.  There is no sound.  The app is free.<br>
-No Wi-Fi or cell signal is required.<br><br>
+This is a simple rapid-fire math drill with a two-minute timer.  There is no sound.<br>
+The app is free.  No Wi-Fi or cell signal is required.<br><br>
 	
 The problem types are addition, subtraction, multiplication and division.<br><br>
 	
 At the end of two minutes, the number of correct and incorrect answers is displayed,<br>
-along with the best correct thus far.  Twelve values are stored for future sessions:<br>
-one for each of the 4 operations and 3 levels.<br><br>
+along with the best-correct thus far.  Twelve best-correct values are tracked: one<br>
+for each of 4 operations and 3 levels.<br><br>
   
-On a settings page (for adults but with no restrictions) children may be added by name and assigned<br>
-a level 1 - 3.  The name, level, chosen operation and 12 best-correct values are stored on your device<br>
-for future sessions.<br><br
+On a settings page (for adults but with no restrictions) children may be added by name and <br>
+assigned a level 1 - 3.  The name, level, chosen operation and 12 best-correct values are stored<br>
+on your device for future sessions.
 
 <h3>Instructions for the Adult</h3>
 	
-On first running the app, there is the option of adding a child's name.  One the home page the wheel at the bottom<br>
-opens a settings page.  Here children can be added or deleted.  There are 3 levels of increasing difficulty,<br>
-and a level can be chosen for the current child.  The clear-settings button sets the number of correct answers<br>
+On first running the app, there is the option of adding a child's name.<br>
+On the home page the wheel at the bottom opens the settings page.  Here children can<br>
+be added or deleted.  There are 3 levels of increasing difficulty, and a level can be<br>
+chosen for the current child.  The clear-settings button sets the number of correct answers<br>
 to zero (for all operations and levels) and the level to 1 for the current child.<br>
 The operation is set to "add", and all best-correct values are set to zero.<br><br>
 	
@@ -43,20 +44,20 @@ There is no automatic progression between levels -- the settings page must be us
 <h3>Instructions for the Child</h3>
 
 On the home page, choose your name if it's not already selected, or have an adult add your name.<br>
-Click the green "Go" button, and on the next page click the "Start" button.  Click one of the 5 buttons to answer.<br>
-New problems will immediately pop up until 2 minutes is up.<br><br>
+Click the green "Go" button, and on the next page click the "Start" button.  Click one of the 5 buttons<br>
+to answer.  New problems will immediately pop up until 2 minutes is up.<br><br>
 	
 At the end of 2 minutes, the number of correct, number of incorrect and your number-correct <br>
 previous best will be displayed.  If the number of correct answers if greater than zero,<br>
-a ballopn animation will be displayed.  If you set a new record, a larger<br>
-balloon will float up with an invitation to pop it by clicking on it.<br><br>
+a balloon animation will be displayed.  If you set a new record, a larger balloon will<br>
+float up with an invitation to pop it by clicking on it.<br><br>
 	
 The "back" button at the top returns you to the home page.<br><br>
 		
 <hr>
 	
 <pre>
-This page was last updated February 7, 2026.  The developer may be contacted at pdyerr icloud com.
+This page was last updated February 1, 2026.  The developer may be contacted at pdyerr icloud com.
 </pre>
 </body>
 </html>
